--- a/WebContent/WEB-INF/zul/crawler/file/mappingfile.zul
+++ b/WebContent/WEB-INF/zul/crawler/file/mappingfile.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,27 +14,39 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="mapping"
-	use="com.jaeksoft.searchlib.web.controller.crawler.file.MappingFileController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('mapping') @init('com.jaeksoft.searchlib.web.controller.crawler.file.MappingFileController')">
 	<hbox align="center">
-		<listbox mold="select" model="@{mapping.urlFieldList}"
-			selectedItem="@{mapping.selectedUrlField}">
-			<listitem self="@{each='urlField'}"
-				label="@{urlField.name}" />
+		<listbox mold="select" model="@load(mapping.urlFieldList)"
+			selectedItem="@bind(mapping.selectedUrlField)">
+			<template name="model">
+				<listitem label="@load(each.name)" />
+			</template>
 		</listbox>
 		<label>linked in</label>
-		<listbox mold="select" model="@{mapping.indexFieldList}"
-			selectedItem="@{mapping.selectedIndexField}">
-			<listitem self="@{each='indexField'}"
-				label="@{indexField.name}" />
+		<listbox mold="select" model="@load(mapping.indexFieldList)"
+			selectedItem="@bind(mapping.selectedIndexField)">
+			<template name="model">
+				<listitem label="@load(each.name)" />
+			</template>
 		</listbox>
-		<button label="add" forward="onAdd" />
+		<button label="add" onClick="@command('onAdd')" />
 	</hbox>
-	<listbox model="@{mapping.fieldMap.list}" itemRenderer="@{mapping}">
+	<listbox model="@load(mapping.fieldMap.list)">
 		<listhead>
 			<listheader label="File field" />
 			<listheader label="Index field" />
 			<listheader label="Action" />
 		</listhead>
+		<template name="model" var="link">
+			<listitem>
+				<listcell label="@load(link.source.uniqueName)" />
+				<listcell label="@load(link.target.name)" />
+				<listcell>
+					<image src="/images/action_delete.png"
+						onClick="@command('onLinkRemove', link=link)" />
+				</listcell>
+			</listitem>
+		</template>
 	</listbox>
 </window>
