Fix the error when choosing default language for Tesseract

--- a/WebContent/WEB-INF/zul/runtime/advanced.zul
+++ b/WebContent/WEB-INF/zul/runtime/advanced.zul
@@ -46,10 +46,9 @@
 						<label value="Tesseract default language" />
 						<listbox mold="select"
 							selectedItem="@bind(advanced.ocrManager.defaultLanguage)"
-							model="@load(advanced.languageEnum)">
+							model="@load(advanced.tesseractLanguageEnum)">
 							<template name="model" var="langEnum">
-								<listitem label="@load(langEnum.name)"
-									value="@load(langEnum)" />
+								<listitem label="@load(langEnum.name)" />
 							</template>
 						</listbox>
 						<label
