--- a/WebContent/WEB-INF/zul/reports/logfiles.zul
+++ b/WebContent/WEB-INF/zul/reports/logfiles.zul
@@ -25,15 +25,15 @@
 		</listhead>
 		<template name="model" var="reportFile">
 			<listitem>
-				<listcell label="@load(reportFile)" />
+				<listcell label="@load(reportFile.name)" />
 				<listcell label="@load(reportFile.date)" />
 				<listcell>
 					<button label="Load"
-						onClick="@command('onLoad', reportFile=reportFile" />
+						onClick="@command('onLoad', reportFile=reportFile)" />
 					<button label="Archive"
-						onClick="@command('onArchive', reportFile=reportFile" />
+						onClick="@command('onArchive', reportFile=reportFile)" />
 					<button label="Delete"
-						onClick="@command('onDelete', reportFile=reportFile" />
+						onClick="@command('onDelete', reportFile=reportFile)" />
 				</listcell>
 			</listitem>
 		</template>
